Opened 18 years ago
Closed 18 years ago
#1241 closed bug (fixed)
BTextView and BScrollView: - Scroll and resize window issue
Reported by: | katisu | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | katisu@…, axeld@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
This currently appears to be a seperate issue, but may be related to ticket #1240. This was originally filed under ticket #1231 as an issue with the PCL6 driver, but after review appears to be related to Haiku's implementation of BTextView and/or BScrollView.
How to reproduce: When adding a PCL6 printer, an additional dialog shows up to select the protocol. If user scrolls the description text down for PCL 6 Protocol Class 1.1 and then resizes the dialog, the description text does not adjust vertically. The result is the top text is cut off and can not be reached without making the dialog smaller again.
Attachments (2)
Change History (8)
by , 18 years ago
Attachment: | Image2.png added |
---|
comment:1 by , 18 years ago
Component: | Servers/app_server → Kits/Interface Kit |
---|---|
Owner: | changed from | to
follow-up: 3 comment:2 by , 18 years ago
Status: | new → assigned |
---|
comment:3 by , 18 years ago
Replying to jackburton:
Should be fixed (as bug #1240) in hrev21207. Can you confirm ?
comment:4 by , 18 years ago
Cc: | added |
---|
BScrollBar::SetRange() isn't updating the value to fit the new ranges. The following patch fixes the problem. Though now Tracker is completely broken. Axel, can you have a look ?
by , 18 years ago
Attachment: | scrollbar.diff added |
---|
comment:5 by , 18 years ago
Owner: | changed from | to
---|---|
Status: | assigned → new |
I'm looking into it; I'm pretty sure your change is correct, though - I'll just search for whatever is responsible for this. Tracker works still fine under BeOS.
comment:6 by , 18 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev21336. Indeed, the actual problem was caused by BView::ScrollBy() not taking the scroll range into account.
Scroll and resize issue