* Applied Stefano's patch to fix bug #1241; BScrollBar::SetValue() did not work   correctly for out of bounds values. * BView::ScrollBy() now limits itself to what eventually attached scroll bars allow;   this fixes the problem Stefano was observing after having applied his patch. * Reenabled the limit check in BScrollBar::SetProportion(); after the above fix, I   could not see any misbehaviour of Tracker anymore; IOW Tracker did not rely on   this before, it was just hiding another bug :) * Minor cleanup in ScrollBar.cpp

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21336 a95241bf-73f2-0310-859d-f6bbb57e9c96